BFD-2925: Convert V1 PatientResourceProvider E2E tests into RestAssured (#1994)